--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <!-- page content -->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="helloWorld.js"></script>
   </body>
 </html>
