--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
   </head>
   <body>
     <!-- page content -->
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="helloWorld.js"></script>
+    <script src="node_modules/systemjs/dist/system.js"></script>
+    <script>
+        SystemJS.config({
+            map: {
+                jquery: "./node_modules/jquery/dist/jquery.min.js"
+            }
+        });
+        SystemJS.import("./helloWorld.js");
+    </script>
   </body>
 </html>
