--- a/index.html
+++ b/index.html
@@ -5,15 +5,32 @@
     <title>Start</title>
   </head>
   <body>
+      <table id="resultsTable">
+          <thead>
+              <tr>
+                  <th>Sexe</th>
+                  <th>Prénom</th>
+                  <th>Occurrence</th>
+                  <th>Année</th>
+              </tr>
+          </thead>
+          <tbody></tbody>
+      </table>
     <!-- page content -->
     <script src="node_modules/systemjs/dist/system.js"></script>
     <script>
         SystemJS.config({
             map: {
                 jquery: "./node_modules/jquery/dist/jquery.min.js"
+            },
+            packages: {
+                app: {
+                    main: "./app.js",
+                    defaultExtension: "js"
+                }
             }
         });
-        SystemJS.import("./helloWorld.js");
+        SystemJS.import("app");
     </script>
   </body>
 </html>
