--- a/index.html
+++ b/index.html
@@ -13,6 +13,30 @@
                   <th>Occurrence</th>
                   <th>Année</th>
               </tr>
+              <tr>
+                  <th>
+                      <select id="filterSexe">
+                        <option value=""></option>
+                        <option value="FILLE">Fille</option>
+                        <option value="GARCON">Garçon</option>
+                      </select>
+                  </th>
+                  <th>
+                      <input type="text" id="filterPrenom" placeholder="Prénom"/>
+                  </th>
+                  <th></th>
+                  <th>
+                      <select id="filterAnnee">
+                        <option value=""></option>
+                        <option value="2010">2010</option>
+                        <option value="2011">2011</option>
+                        <option value="2012">2012</option>
+                        <option value="2013">2013</option>
+                        <option value="2014">2014</option>
+                        <option value="2015">2015</option>
+                      </select>
+                    </th>
+              </tr>
           </thead>
           <tbody></tbody>
       </table>
